--- a/src/frontend/views/company.html
+++ b/src/frontend/views/company.html
@@ -141,6 +141,7 @@ und die nicht angeklickten grau sein (aktuell andersrum)-->
   <script>
     const map = L.map('map').setView([37.7749, -122.4194], 5);
     timeButtons();
+    customDate();
     </script>
   <script>
     
