--- a/src/frontend/views/individualStore.html
+++ b/src/frontend/views/individualStore.html
@@ -13,7 +13,7 @@
   <script src="/static/echarts/echarts.js"></script>
   <script src="/static/charts/indivivdualCharts.js" type="text/javascript"></script>
   <script type="text/javascript" src="/static/echarts/echarts.min.js"></script>
-  <script type="text/javascript" src="/static/UI/buttons.js"></script>
+  <script type="text/javascript" src="/static/UI/ui.js"></script>
  <style>
   #dashboardContainer {width: 1000px;height: 150px;}
   #statsOverviewContainer {width: 100%; height: 150px;}
