--- a/src/frontend/styles/companyStyle.css
+++ b/src/frontend/styles/companyStyle.css
@@ -4,6 +4,7 @@ body {
   color: white;
 }
 
+/* Button Container */
 .button-container {
   display: flex;
   justify-content: center;
@@ -45,8 +46,47 @@ body {
   background-color: #FF6347;
 }
 
+/* Tooltip styling */
+#tooltip {
+  position: relative;
+  cursor: pointer;
+  border-bottom: 2px dotted;
+  padding: 7px;
+  font-size: 25px;
+  font-weight: bold;
+  font-family: sans-serif;
+}
 
+#tooltipText {
+  position: absolute;
+  left: 50%;
+  top: 0%;
+  transform: translateX(-50%);
+  background-color: #000;
+  color: #fff;
+  white-space: nowrap;
+  padding: 10px 15px;
+  border-radius: 7px;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
 
+#tooltipText::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 100%;
+  transform: translateX(-50%);
+  border: 15px solid;
+  border-color: #000 transparent transparent transparent;
+}
+
+#tooltip:hover #tooltipText {
+  top: 130%;
+  visibility: visible;
+  opacity: 1;
+}
 
 /* Chart container styling */
 .chart-container {
@@ -101,7 +141,6 @@ body {
   border: 2px solid #3a3a3a;
   border-radius: 10px;
   padding: 10px;
-  
 }
 
 #generalStats {
@@ -134,13 +173,13 @@ body {
 }
 
 .stat-item {
-  
   padding: 10px;
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   flex: 1;
   min-width: 150px;
   text-align: center;
+  background-color: #3a3a3a;
 }
 
 .stat-item h3 {
@@ -196,7 +235,8 @@ body {
 }
 
 #revenueContainer,
-#revenueBarContainer {
+#revenueBarContainer,
+#pizzaRankingContainer {
   flex: 1;
   margin-top: 20px;
   border: 2px solid #3a3a3a;
@@ -205,12 +245,17 @@ body {
   box-sizing: border-box;
 }
 
-#revenue {
+#revenue{
   width: 100%;
   height: 600px;
 }
 
 #revenueBar {
+  width: 100%;
+  height: 600px;
+}
+
+#pizzaRanking {
   width: 100%;
   height: 600px;
 }
@@ -275,3 +320,5 @@ body {
   gap: 10px;
   flex-wrap: wrap;
 }
+
+
