--- a/src/frontend/views/company.html
+++ b/src/frontend/views/company.html
@@ -128,6 +128,13 @@ und die nicht angeklickten grau sein (aktuell andersrum)-->
   </div>
 </div>
 
+<div id="pizzaRankingContainer">
+  <div id="pizzaRanking">
+      <h2 id="pizzaRankingTitle" data-tooltip="This is the pizza ranking section">Pizza Ranking</h2>
+      <div id="pizzaRankingChart" class="chart" style="height: 600px;">
+      </div>
+  </div>
+
   <div id="mapContainer">
       <h2 data-tooltip="This is the a Map showing all Stores">All Stores in the US</h2>
     <div id="map" style="height: 600; width: 100%;">  
@@ -201,7 +208,7 @@ und die nicht angeklickten grau sein (aktuell andersrum)-->
     statOverview();
     sideBar();
     storeLocationMap();
-
+    pizzaRanking();
     // Function to display the data in organized boxes
     
   </script>
