buttons new names frnachise view

--- a/src/frontend/views/company.html
+++ b/src/frontend/views/company.html
@@ -39,9 +39,10 @@ und die nicht angeklickten grau sein (aktuell andersrum)-->
   <div class="button-container">
     <div class="button-group">
       
-      <button id="Last-Year">Last Year</button>
-      <button id="Last-Quarter">Last Quarter</button>
-      <button id="Last-Month">Last Month</button>
+      <button id="MTD">MTD</button>
+      <button id="QTD">QTD</button>
+      <button id="YTD">YTD</button>
+      <button id="PTD">pTD</button>
       <div class="customdate" id="customDateForm">
       <form id="dateForm">
         <button id="customDate">Custom Date</button>
