--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -20,11 +20,11 @@
     <button class="openbtn" onclick="toggleSidebar()">☰</button>
 
     <div id="sidebar" class="sidebar">
-      <a href="#" class="closebtn" onclick="toggleSidebar()">&times;</a>
+      <a class="closebtn" onclick="toggleSidebar()">&times;</a>
       <a href="/store=S123456">S123456</a>
     </div>
 
-    <div id="main">
+    <div id="main" class="main">
       <h2>Collapsed Sidebar</h2>
       <p>
         Click on the hamburger menu/bar icon to open the sidebar, and push this
