--- a/src/frontend/views/company.html
+++ b/src/frontend/views/company.html
@@ -18,7 +18,7 @@ und die nicht angeklickten grau sein (aktuell andersrum)-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   
   <script src="/static/echarts/echarts.js"></script>
-  <script src="/static/charts/charts.js" type="text/javascript"></script>
+  <script src="/static/charts/franchiseCharts.js" type="text/javascript"></script>
   
   <script type="text/javascript" src="/static/echarts/echarts.min.js"></script>
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
