Pizza Size new chart implemented, needs new size

--- a/src/frontend/views/individualStore.html
+++ b/src/frontend/views/individualStore.html
@@ -84,7 +84,7 @@
 
 <div id="PizzaSizeContainer">
   <h1 data-tooltip="This is the ordered pizza sizes section">Ordered Pizza Sizes</h1>
-  <div id="PizzaSize" style="width: 400px; height: 400px"></div>
+  <div id="PizzaSize" style="width: 600px; height: 600px"></div>
 </div>
 
 <div id="abcContainer1">
@@ -172,7 +172,7 @@
 
   heatmap();
 
-  //pizzaSize();
+  pizzaSize();
 
   abcAnalysis_customer_1();
   abcAnalysis_customer_2();
