refactor: Update heading for pizza ingredient consumption and adjusting the diagram to the mock up

--- a/src/frontend/views/individualStore.html
+++ b/src/frontend/views/individualStore.html
@@ -103,7 +103,7 @@
 </div>
 
 <div id="pizzaIngredientsContainer">
-  <h1 data-tooltip="This is the ingredient consumption in kg per week section">Ingredient Consumption in kg per Week</h1>
+  <h1 data-tooltip="This is the average ingredient consumption">Average Usage of Pizza Ingredients</h1>
   <div id="pizzaIngredients" style="width: 600px; height: 600px"></div>
 </div>
  <!--
