--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -17,12 +17,50 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="topbar"></div>
     <button class="openbtn" onclick="toggleSidebar()">☰</button>
+    <div id="topbar" onclick="toggleSidebar(true)">
+      <div class="btnbox">
+        <button class="btn">MTD</button>
+        <button class="btn">QTD</button>
+        <button class="btn">YTD</button>
+        <button class="btn">PTD</button>
+      </div>
+      <div class="btnbox">
+        <button class="infobox">FROM: XX-XX-XXXX</button>
+        <button class="infobox">TO: XX-XX-XXXX</button>
+        <button class="infobox">PERIOD: XXDAYS</button>
+      </div>
+    </div>
 
     <div id="sidebar" class="sidebar">
-      <p class="closebtn" onclick="toggleSidebar()">&times;</p>
-      <a href="/store=S123456">S123456</a>
+      <!--<p class="closebtn" onclick="toggleSidebar()">&times;</p>-->
+      <a href="/">Home</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
     </div>
     <div id="main" class="main" onclick="toggleSidebar(true)">
       <!-- Put content here -->
