--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -11,15 +11,124 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap"
     />
 
     <title>Document</title>
   </head>
   <body>
+    <button class="openbtn" onclick="toggleSidebar()">☰</button>
+    <div id="topbar" onclick="toggleSidebar(true)">
+      <div class="btnbox">
+        <button class="btn">MTD</button>
+        <button class="btn">QTD</button>
+        <button class="btn">YTD</button>
+        <button class="btn">PTD</button>
+      </div>
+      <div class="btnbox">
+        <button class="infobox">FROM: XX-XX-XXXX</button>
+        <button class="infobox">TO: XX-XX-XXXX</button>
+        <button class="infobox">PERIOD: XXDAYS</button>
+      </div>
+    </div>
+
+    <div id="sidebar" class="sidebar">
+      <!--<p class="closebtn" onclick="toggleSidebar()">&times;</p>-->
+      <a href="/">Home</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+      <a href="/store">S123456</a>
+    </div>
+    <div id="main" class="main" onclick="toggleSidebar(true)">
+      <!-- Put content here -->
+      <!--Stats-->
+      <div class="section">
+        <h1>Stats</h1>
+        <div class="section-items">
+          <!--PizzaHub-->
+          <div class="section">
+            <h1>S123456</h1>
+            <div class="section-items">
+              <div class="statBox">
+                <h2>Sales<h2>
+                <p>1234</p>
+              </div>
+              <div class="statBox">
+                <h2>Revenue</h2>
+                <p>1234</p>
+              </div>
+              <div class="statBox">
+                <h2>Customers</h2>
+                <p>1234</p>
+              </div>
+              <div class="statBox">
+                <h2>Placeholder</h2>
+                <p>1234</p>
+              </div>
+            </div>
+          </div>
+          <!--Customers-->
+          <div class="section">
+            <h1>Customers</h1>
+            <div class="section-items">
+              <div class="statBox">
+                <h2>Placeholder</h2>
+                <p>1234</p>
+              </div>
+              <div class="statBox">
+                <h2>Order Value</h2>
+                <p>1234</p>
+              </div>
+              <div class="statBox">
+                <h2>PizzaOrder</h2>
+                <p>1234</p>
+              </div>
+              <div class="statBox">
+                <h2>Places</h2>
+                <p>1234</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--Stats End-->
 
 
-
-    
+      <!-- End of Content -->
+    </div>
+    <script>
+      function toggleSidebar(turnOff = false) {
+        if (turnOff) {
+          document.getElementById("sidebar").classList.remove("active");
+          document.getElementById("main").classList.remove("active");
+        } else {
+        document.getElementById("sidebar").classList.toggle("active");
+        document.getElementById("main").classList.toggle("active");
+      }
+      }
+    </script>
   </body>
 </html>
