--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -18,6 +18,7 @@
   </head>
   <body>
     <button class="openbtn" onclick="toggleSidebar()">☰</button>
+    <a id="companyname" href="/">@ PizzaHub</a>
     <div id="topbar" onclick="toggleSidebar(true)">
       <div class="btnbox">
         <button class="btn">MTD</button>
@@ -34,31 +35,6 @@
 
     <div id="sidebar" class="sidebar">
       <!--<p class="closebtn" onclick="toggleSidebar()">&times;</p>-->
-      <a href="/">Home</a>
-      <a href="/store">S123456</a>
-      <a href="/store">S123456</a>
-      <a href="/store">S123456</a>
-      <a href="/store">S123456</a>
-      <a href="/store">S123456</a>
-      <a href="/store">S123456</a>
-      <a href="/store">S123456</a>
-      <a href="/store">S123456</a>
-      <a href="/store">S123456</a>
-      <a href="/store">S123456</a>
-      <a href="/store">S123456</a>
-      <a href="/store">S123456</a>
-      <a href="/store">S123456</a>
-      <a href="/store">S123456</a>
-      <a href="/store">S123456</a>
-      <a href="/store">S123456</a>
-      <a href="/store">S123456</a>
-      <a href="/store">S123456</a>
-      <a href="/store">S123456</a>
-      <a href="/store">S123456</a>
-      <a href="/store">S123456</a>
-      <a href="/store">S123456</a>
-      <a href="/store">S123456</a>
-      <a href="/store">S123456</a>
       <a href="/store">S123456</a>
       <a href="/store">S123456</a>
     </div>
