--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -28,7 +28,7 @@
       </div>
       <div class="btnbox">
         <button class="infobox">FROM: XX-XX-XXXX</button>
-        <button class="infobox">TO: XX-XX-XXXX</button>
+        <button class="infobox">TO: 31-12-2022</button>
         <button class="infobox">PERIOD: XXDAYS</button>
       </div>
     </div>
