--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -19,6 +19,11 @@
   <body>
     <button class="openbtn" onclick="toggleSidebar()">☰</button>
     <a id="companyname" href="/">@ PizzaHub</a>
+    <div id="user">
+      <h1>Sebastian Bremm</h1>
+      <p>Programming Lab Professor</p>
+    </div>
+    <img id="icon" src="/img/icon.png">
     <div id="topbar" onclick="toggleSidebar(true)">
       <div class="btnbox">
         <button class="btn">MTD</button>
@@ -34,7 +39,6 @@
     </div>
 
     <div id="sidebar" class="sidebar">
-      <!--<p class="closebtn" onclick="toggleSidebar()">&times;</p>-->
       <a href="/store">S123456</a>
       <a href="/store">S123456</a>
     </div>
@@ -91,10 +95,7 @@
         </div>
       </div>
       <!--Stats End-->
-
-
-      <!-- End of Content -->
-    </div>
+     
     <script>
       function toggleSidebar(turnOff = false) {
         if (turnOff) {
