--- a/src/frontend/styles/main.css
+++ b/src/frontend/styles/main.css
@@ -75,7 +75,7 @@ button {
   z-index: 9999;
 }
 
-button:hover {
+button:hover, button:active {
   background-color: #ff6347;
   cursor: pointer;
 }
@@ -89,6 +89,10 @@ button:hover {
   border: none;
   line-height: 3px;
   z-index: 9999;
+}
+
+.openbtn:active, .openbtn:hover {
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.3);
 }
 
 .sidebar.active {
