--- a/src/frontend/views/individualStore.html
+++ b/src/frontend/views/individualStore.html
@@ -88,17 +88,17 @@
 </div>
 
 <div id="abcContainer1">
-  <h1 data-tooltip="This is the ABC analysis for Customer 1 section">ABC Analysis Customer 1</h1>
-  <div id="abcAnalysis_customer_1" style="width: 600px; height: 600px"></div>
+  <h1 data-tooltip="This is the ABC analysis for Customer 1 section">ABC Analysis of Customers by sorted_cumulative_customer_percentage_of_total</h1>
+  <div id="abcAnalysis_customer_1" style="width: 1000px; height: 600px"></div>
 </div>
 
 <div id="abcContainer2">
-  <h1 data-tooltip="This is the ABC analysis for Customer 2 section">ABC Analysis Customer 2</h1>
-  <div id="abcAnalysis_customer_2" style="width: 600px; height: 600px"></div>
+  <h1 data-tooltip="This is the ABC analysis for Customer 2 section">ABC Analysis of Customers total Revenue descending</h1>
+  <div id="abcAnalysis_customer_2" style="width: 1000px; height: 600px"></div>
 </div>
 
 <div id="abcContainer3">
-  <h1 data-tooltip="This is the ABC analysis for Pizza 1 section">ABC Analysis Pizza 1</h1>
+  <h1 data-tooltip="This is the ABC analysis for Pizza 1 section">ABC Analysis of Pizza by sorted_cumulative_customer_percentage_of_total</h1>
   <div id="abcAnalysis_pizza_1" style="width: 600px; height: 600px"></div>
 </div>
 
